--- a/templates/polls/result.html
+++ b/templates/polls/result.html
@@ -13,6 +13,6 @@
     {% endfor %}
 </ul>
 
-<a href="{% url "polls:detail" question_id %}">Vote again</a>
+<!--<a href="{% url "polls:detail" question_id %}">Vote again</a> -->
 </body>
 </html>
